--- a/Day2/haproxy.cfg
+++ b/Day2/haproxy.cfg
@@ -3,8 +3,13 @@ listen	appli3-relais 0.0.0.0:10003
 
 backend  server.xiju.com
     server 192.168.1.50 192.168.1.50 weight 3 maxconn 5000
-    server 192.168.1.60 192.168.1.60 weight 7 maxconn 5000
+    server 192.168.1.60 192.168.1.60 weight 7 maxconn 100
 
 backend  admin.xiju.com
     server 192.168.1.53 192.168.1.53 weight 4 maxconn 5000
     server 192.168.1.54 192.168.1.54 weight 6 maxconn 5000
+
+backend  test.xiju.com
+    server 192.168.1.56 192.168.1.56 weight 4 maxconn 5000
+    server 192.168.1.53 192.168.1.53 weight 4 maxconn 5000
+
